# IT-Projekt

./: .gitignore  CMakeLists.txt  README.md
Diffie-Hellman/: client.py
Kyber/: CMakeLists.txt  Makefile  client.c  server.c
Sphincs/: CMakeLists.txt  Makefile  clientSphincs.c  serverSphincs.c
include/sphincs_utils/: thash_shake_simple.c
src/Diffie-Hellman/: server.py
src/Kyber/: api_kyber.h  api_sphincs.h  client.c
src/Sphincs/: serverSphincs.c
